# brum-data

./: README.md  data_beskrivelse.md  pyproject.toml  requirements_bq.txt
dags/: daily_data_update.py  daily_raw_data_migrate.py
plotting/: plot_gold_mock.py  plot_mock_data.py
src/: Config.py
src/data_collection/: aggregation.py  data_cleaning.py  functions.py  join_and_clean.py  schema.json  transfer_bq_datasets.py
src/data_collection/queries/: update_gjennomforinger.sql  update_nav_enhet.sql
src/data_mocking/: create_mock_data.py  mock_aggregering.py  mock_aggregering_avdeling.py  mock_deltaker.py  mock_deltaker_schema.json  mock_deltakere.csv  mock_gjennomforinger.csv  mock_schema.json  mock_tiltakstyper.csv  readme.md
