[project]
name = "brum-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-auth>=2.40.3",
    "google-cloud>=0.34.0",
    "google-cloud-bigquery>=3.34.0",
    "google-cloud-secret-manager>=2.24.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
]
